--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <meta name="keywords"
         content="Recoverly, spine surgery recovery, lumbar surgery, laminectomy, discectomy, nerve pain tracker, back pain app, surgery recovery app" />
   <meta property="og:type" content="website">
-<meta property="og:title" content="Recoverly — Spine & Nerve Recovery Tracker">
-<meta property="og:description"
-      content="Recoverly helps you track back pain, leg nerve symptoms, and daily activity after lumbar or nerve surgery so you can understand your recovery and bring clear data to follow-up visits.">
-<meta property="og:url" content="https://richr44.github.io/recoverly/">
-<meta property="og:image" content="https://richr44.github.io/recoverly/og-image.png">
+  <meta property="og:title" content="Recoverly — Spine & Nerve Recovery Tracker">
+  <meta property="og:description"
+        content="Recoverly helps you track back pain, leg nerve symptoms, and daily activity after lumbar or nerve surgery so you can understand your recovery and bring clear data to follow-up visits.">
+  <meta property="og:url" content="https://richr44.github.io/recoverly/">
+  <meta property="og:image" content="https://richr44.github.io/recoverly/og-image.png">
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Recoverly — Spine & Nerve Recovery Tracker">
-<meta name="twitter:description"
-      content="Track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.">
-<meta name="twitter:image" content="https://richr44.github.io/recoverly/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Recoverly — Spine & Nerve Recovery Tracker">
+  <meta name="twitter:description"
+        content="Track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.">
+  <meta name="twitter:image" content="https://richr44.github.io/recoverly/og-image.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
@@ -116,6 +116,30 @@
       margin-bottom: 40px;
     }
 
+    /* ✅ Desktop-only: place "How Recoverly works" under "Why Recoverly?" */
+    @media (min-width: 841px) {
+      .top-grid {
+        display: grid;
+        grid-template-columns: minmax(0, 1.25fr) minmax(0, 1fr);
+        grid-template-areas:
+          "left right"
+          "left works";
+        gap: 32px;
+        align-items: start;
+        margin-bottom: 40px; /* replaces hero margin-bottom spacing */
+      }
+
+      .hero-left { grid-area: left; }
+      .hero-right { grid-area: right; }
+      .works-card { grid-area: works; }
+
+      /* Let the wrapper control layout without double-gridding */
+      header.hero {
+        display: contents;
+        margin-bottom: 0;
+      }
+    }
+
     @media (max-width: 840px) {
       /* Header logo: don't float on mobile */
       .site-branding {
@@ -131,6 +155,12 @@
       /* Stack hero columns */
       header.hero {
         grid-template-columns: minmax(0, 1fr);
+      }
+
+      /* Mobile keeps normal flow */
+      .top-grid {
+        display: block;
+        margin-bottom: 40px;
       }
     }
 
@@ -345,26 +375,26 @@
       }
     }
 
-.screen-card {
-  background: radial-gradient(circle at top, rgba(15, 23, 42, 0.9), #020617);
-  border-radius: 18px;
-  border: 1px solid rgba(148, 163, 184, 0.4);
-  padding: 10px;
-  box-shadow: 0 16px 30px rgba(0, 0, 0, 0.85);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* keep caption pinned to bottom */
-  gap: 8px;
-}
+    .screen-card {
+      background: radial-gradient(circle at top, rgba(15, 23, 42, 0.9), #020617);
+      border-radius: 18px;
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      padding: 10px;
+      box-shadow: 0 16px 30px rgba(0, 0, 0, 0.85);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; /* keep caption pinned to bottom */
+      gap: 8px;
+    }
 
-.screen-card img {
-  width: 100%;
-  aspect-ratio: 9 / 19.5;  /* force all screenshots to same shape */
-  object-fit: cover;       /* crop any extra instead of stretching */
-  object-position: top;    /* align cropping from the top */
-  border-radius: 14px;
-  display: block;
-}
+    .screen-card img {
+      width: 100%;
+      aspect-ratio: 9 / 19.5;  /* force all screenshots to same shape */
+      object-fit: cover;       /* crop any extra instead of stretching */
+      object-position: top;    /* align cropping from the top */
+      border-radius: 14px;
+      display: block;
+    }
 
     .screen-card span {
       font-size: 12px;
@@ -390,6 +420,7 @@
       text-decoration-style: dotted;
     }
   </style>
+
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -416,115 +447,119 @@
 
   <div class="page">
     <main class="shell">
-      <header class="hero">
-        <!-- Left side: copy -->
-        <div>
-          <div class="pill">
-            <span class="pill-dot"></span>
-            Built for spine & nerve recovery
+
+      <!-- ✅ Wrap hero + "How Recoverly works" so it sits under "Why Recoverly?" on desktop -->
+      <section class="top-grid">
+        <header class="hero">
+          <!-- Left side: copy -->
+          <div class="hero-left">
+            <div class="pill">
+              <span class="pill-dot"></span>
+              Built for spine & nerve recovery
+            </div>
+
+            <h1>Recovery you can <strong>see</strong> — so you’re not relying on memory alone.</h1>
+
+            <p class="subtle-note">
+              Recoverly doesn’t define what’s medically normal — it simply helps you understand how
+              <em>your own</em> symptoms change over time.
+            </p>
+
+            <p>
+              Recoverly helps you track back pain, nerve symptoms, and daily activity — so you can clearly see how your recovery changes over time.
+            </p>
+
+            <div class="hero-meta">
+              <span class="badge">Post-surgery friendly</span>
+              <span class="badge">No account required</span>
+              <span>Designed by a real spine-surgery patient.</span>
+            </div>
+
+            <!-- Personal story line -->
+            <p class="subtle-note">
+              I’m Rich, and I built Recoverly after my own lumbar spine surgery, when I kept forgetting
+              which days were actually better or worse.
+            </p>
+
+            <p class="subtle-note">
+              No account, no cloud — your recovery data stays on your device unless you choose to export
+              a PDF.
+            </p>
+
+            <div class="cta-row">
+              <a
+                class="btn-primary"
+                href="https://apps.apple.com/us/app/recoverly-recovery-tracker/id6756222251"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Download on the App Store
+              </a>
+
+              <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
+                Contact us
+              </a>
+            </div>
+
+            <p class="note-text">Questions or feedback? Reach out anytime.</p>
+
+            <p class="note-text">
+              Recoverly doesn’t replace your surgeon or physical therapist. It’s a tool to help you
+              remember the details and see how your symptoms and activity are trending between visits.
+            </p>
           </div>
 
-          <h1>Recovery you can <strong>see</strong> — so you’re not relying on memory alone.</h1>
+          <!-- Right side: Why Recoverly -->
+          <aside class="card hero-right">
+            <h3>Why Recoverly?</h3>
+            <h2>Turn hazy weeks into clear, understandable trends.</h2>
+            <p>
+              The first weeks after surgery blur together. Was today better than last Tuesday? Are
+              tingling and spasms easing up, or just moving around?
+            </p>
+            <p>
+              <strong>Best for:</strong> lumbar surgery, nerve decompression, fusion, or similar
+              back/nerve procedures.
+            </p>
+            <p>
+              Recoverly gives you a simple way to log each day and see those “I think so…” answers
+              become clear charts.
+            </p>
 
-          <p class="subtle-note">
-            Recoverly doesn’t define what’s medically normal — it simply helps you understand how
-            <em>your own</em> symptoms change over time.
-          </p>
+            <ul class="list-check">
+              <li>
+                <span class="icon">✔</span>
+                <span>
+                  Built around common lumbar and nerve symptoms: back pain, hip/glute pain, leg nerve
+                  pain, tingling, and spasms.
+                </span>
+              </li>
+              <li>
+                <span class="icon">✔</span>
+                <span>
+                  Track walking and sitting tolerance so you can see how activity changes week to week.
+                </span>
+              </li>
+              <li>
+                <span class="icon">✔</span>
+                <span>Designed to be used once a day in under a minute.</span>
+              </li>
+            </ul>
+          </aside>
+        </header>
 
-          <p>
-            Recoverly helps you track back pain, nerve symptoms, and daily activity — so you can clearly see how your recovery changes over time.
-          </p>
-
-          <div class="hero-meta">
-            <span class="badge">Post-surgery friendly</span>
-            <span class="badge">No account required</span>
-            <span>Designed by a real spine-surgery patient.</span>
-          </div>
-
-          <!-- Personal story line -->
-          <p class="subtle-note">
-            I’m Rich, and I built Recoverly after my own lumbar spine surgery, when I kept forgetting
-            which days were actually better or worse.
-          </p>
-
-          <p class="subtle-note">
-            No account, no cloud — your recovery data stays on your device unless you choose to export
-            a PDF.
-          </p>
-
-          
-          <div class="cta-row">
-            <a
-              class="btn-primary"
-              href="https://apps.apple.com/us/app/recoverly-recovery-tracker/id6756222251"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              Download on the App Store
-            </a>
-
-
-            <a class="btn-ghost" href="mailto:getrecoverly@gmail.com">
-              Contact us
-            </a>
-          </div>
-
-          <p class="note-text">Questions or feedback? Reach out anytime.</p>
-
-          <p class="note-text">
-            Recoverly doesn’t replace your surgeon or physical therapist. It’s a tool to help you
-            remember the details and see how your symptoms and activity are trending between visits.
-          </p>
-        </div>
-
-        <!-- Right side: Why Recoverly -->
-        <aside class="card">
-          <h3>Why Recoverly?</h3>
-          <h2>Turn hazy weeks into clear, understandable trends.</h2>
-          <p>
-            The first weeks after surgery blur together. Was today better than last Tuesday? Are
-            tingling and spasms easing up, or just moving around?
-          </p>
-          <p>
-            <strong>Best for:</strong> lumbar surgery, nerve decompression, fusion, or similar
-            back/nerve procedures.
-          </p>
-          <p>
-            Recoverly gives you a simple way to log each day and see those “I think so…” answers
-            become clear charts.
-          </p>
-
+        <!-- This will sit under "Why Recoverly?" on desktop -->
+        <section class="card works-card" style="margin-bottom: 24px;">
+          <h3>How Recoverly works</h3>
+          <h2>A simple daily flow — built for real recovery.</h2>
           <ul class="list-check">
-            <li>
-              <span class="icon">✔</span>
-              <span>
-                Built around common lumbar and nerve symptoms: back pain, hip/glute pain, leg nerve
-                pain, tingling, and spasms.
-              </span>
-            </li>
-            <li>
-              <span class="icon">✔</span>
-              <span>
-                Track walking and sitting tolerance so you can see how activity changes week to week.
-              </span>
-            </li>
-            <li>
-              <span class="icon">✔</span>
-              <span>Designed to be used once a day in under a minute.</span>
-            </li>
+            <li><span class="icon">✔</span><span>Log your day once — pain, nerve symptoms, movement, and notes.</span></li>
+            <li><span class="icon">✔</span><span>See clearer patterns in History and Insights week over week.</span></li>
+            <li><span class="icon">✔</span><span>Export a clean PDF summary before follow-up visits.</span></li>
           </ul>
-        </aside>
-      </header>
-    <section class="card" style="margin-bottom: 24px;">
-  <h3>How Recoverly works</h3>
-  <h2>A simple daily flow — built for real recovery.</h2>
-  <ul class="list-check">
-    <li><span class="icon">✔</span><span>Log your day once — pain, nerve symptoms, movement, and notes.</span></li>
-    <li><span class="icon">✔</span><span>See clearer patterns in History and Insights week over week.</span></li>
-    <li><span class="icon">✔</span><span>Export a clean PDF summary before follow-up visits.</span></li>
-  </ul>
-</section>
-      
+        </section>
+      </section>
+
       <!-- Two main cards -->
       <section class="card-grid">
         <article class="card">
@@ -555,61 +590,62 @@
           </ul>
         </article>
 
-<article class="card">
-  <h3>Share a clean report</h3>
-  <h2>Bring your care team into the picture.</h2>
-  <p>
-    When you’re ready for a follow-up, Recoverly creates a clean PDF summary you can share with your care team.
-    <strong>Full PDF reports are available with Recoverly Premium.</strong>
-  </p>
-  <ul class="list-check">
-    <li>
-      <span class="icon">✔</span>
-      <span>
-        Weekly charts for pain, nerve symptoms, and activity.
-      </span>
-    </li>
-    <li>
-      <span class="icon">✔</span>
-      <span>Plain-language summaries to review together.</span>
-    </li>
-    <li>
-      <span class="icon">✔</span>
-      <span>
-        Designed for laminectomy, discectomy, fusion, and other lumbar
-        procedures.
-      </span>
-    </li>
-  </ul>
-</article></section>
+        <article class="card">
+          <h3>Share a clean report</h3>
+          <h2>Bring your care team into the picture.</h2>
+          <p>
+            When you’re ready for a follow-up, Recoverly creates a clean PDF summary you can share with your care team.
+            <strong>Full PDF reports are available with Recoverly Premium.</strong>
+          </p>
+          <ul class="list-check">
+            <li>
+              <span class="icon">✔</span>
+              <span>
+                Weekly charts for pain, nerve symptoms, and activity.
+              </span>
+            </li>
+            <li>
+              <span class="icon">✔</span>
+              <span>Plain-language summaries to review together.</span>
+            </li>
+            <li>
+              <span class="icon">✔</span>
+              <span>
+                Designed for laminectomy, discectomy, fusion, and other lumbar
+                procedures.
+              </span>
+            </li>
+          </ul>
+        </article>
+      </section>
 
-<!-- Screenshots -->
-<section class="screens" id="screenshots">
-  <h2>Preview Recoverly</h2>
-  <p>
-    A preview of key screens you’ll use during recovery. Exact screens may
-    change slightly as we improve the app.
-  </p>
+      <!-- Screenshots -->
+      <section class="screens" id="screenshots">
+        <h2>Preview Recoverly</h2>
+        <p>
+          A preview of key screens you’ll use during recovery. Exact screens may
+          change slightly as we improve the app.
+        </p>
 
-  <div class="screen-grid">
-    <div class="screen-card">
-      <img class="preview-screenshot" src="screen-today.png" alt="Recoverly Today view" />
-      <span>Today — log pain, nerve symptoms, and activity in under a minute.</span>
-    </div>
-    <div class="screen-card">
-      <img class="preview-screenshot" src="screen-history.png" alt="Recoverly History view" />
-      <span>History — see how good and tough days line up on the calendar.</span>
-    </div>
-    <div class="screen-card">
-      <img class="preview-screenshot" src="screen-insights.png" alt="Recoverly Insights view" />
-      <span>Insights — clear weekly trends for pain, movement, and nerve symptoms.</span>
-    </div>
-    <div class="screen-card">
-      <img class="preview-screenshot" src="screen-report.png" alt="Recoverly PDF report preview" />
-      <span>PDF Report — share a clean summary with your surgeon or therapist.</span>
-    </div>
-  </div>
-</section></section>
+        <div class="screen-grid">
+          <div class="screen-card">
+            <img class="preview-screenshot" src="screen-today.png" alt="Recoverly Today view" />
+            <span>Today — log pain, nerve symptoms, and activity in under a minute.</span>
+          </div>
+          <div class="screen-card">
+            <img class="preview-screenshot" src="screen-history.png" alt="Recoverly History view" />
+            <span>History — see how good and tough days line up on the calendar.</span>
+          </div>
+          <div class="screen-card">
+            <img class="preview-screenshot" src="screen-insights.png" alt="Recoverly Insights view" />
+            <span>Insights — clear weekly trends for pain, movement, and nerve symptoms.</span>
+          </div>
+          <div class="screen-card">
+            <img class="preview-screenshot" src="screen-report.png" alt="Recoverly PDF report preview" />
+            <span>PDF Report — share a clean summary with your surgeon or therapist.</span>
+          </div>
+        </div>
+      </section>
 
       <footer>
         <span>© 2025 Rich Rabin. All rights reserved.</span>
