--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
   <title>Recoverly — Back & Nerve Recovery Tracker</title>
 
   <!-- Basic SEO -->
-  <meta name="description"
-        content="Recoverly helps you track back pain, leg nerve symptoms, and daily activity after lumbar or nerve surgery so you can understand your recovery and bring clear data to follow-up visits." />
-  <meta name="keywords"
-        content="Recoverly, spine surgery recovery, lumbar surgery, laminectomy, discectomy, nerve pain tracker, back pain app, surgery recovery app" />
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Recoverly — Spine & Nerve Recovery Tracker">
-  <meta property="og:description"
-        content="Recoverly helps you track back pain, leg nerve symptoms, and daily activity after lumbar or nerve surgery so you can understand your recovery and bring clear data to follow-up visits.">
-  <meta property="og:url" content="https://richr44.github.io/recoverly/">
-  <meta property="og:image" content="https://richr44.github.io/recoverly/og-image.png">
+<!-- Basic SEO -->
+<meta name="description"
+      content="Recoverly is an iPhone-only symptom tracker for lumbar recovery—log back/leg nerve pain, tingling, spasms, and walking/sitting time so you can see patterns and bring clearer notes to follow-ups." />
+<meta name="keywords"
+      content="Recoverly, lumbar recovery, microdiscectomy, discectomy, laminectomy, sciatica, nerve pain tracker, symptom tracker, back pain app, spine surgery recovery" />
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Recoverly — Spine & Nerve Recovery Tracker">
-  <meta name="twitter:description"
-        content="Track back pain, leg nerve symptoms, and daily activity so you can clearly see how your recovery changes over time.">
-  <meta name="twitter:image" content="https://richr44.github.io/recoverly/og-image.png">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Recoverly — Lumbar Recovery Symptom Tracker (iPhone)">
+<meta property="og:description"
+      content="iPhone-only symptom tracker for lumbar recovery—log back/leg nerve pain, tingling, spasms, and walking/sitting time to see patterns over time.">
+<meta property="og:url" content="https://richr44.github.io/recoverly/">
+<meta property="og:image" content="https://richr44.github.io/recoverly/og-image.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Recoverly — Lumbar Recovery Symptom Tracker (iPhone)">
+<meta name="twitter:description"
+      content="iPhone-only lumbar recovery tracker—log symptoms and walking/sitting time to spot patterns over time.">
+<meta name="twitter:image" content="https://richr44.github.io/recoverly/og-image.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
