--- a/index.html
+++ b/index.html
@@ -118,7 +118,20 @@ a{text-decoration:none;color:inherit}
   font-size:14px;
   line-height:1.5;
 }
-
+<!-- Founder section -->
+<section class="founder">
+  <div class="founder-inner">
+    <h2>Built from real spine recovery.</h2>
+    <p>
+      Recoverly was created by a spine surgery patient who needed a clearer way to
+      track progress between follow-up appointments.
+    </p>
+    <p>
+      It’s grounded in lived experience — but built with structure and discipline
+      so anyone recovering from lumbar, cervical, or other spine procedures can use it confidently.
+    </p>
+  </div>
+</section>
 /* SCREENSHOTS */
 
 .screens{
@@ -145,6 +158,30 @@ footer{
 footer a{
   color:var(--muted);
   text-decoration:underline dotted;
+}
+      /* Founder section */
+
+.founder {
+  margin: 80px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.founder-inner {
+  max-width: 720px;
+  text-align: center;
+}
+
+.founder h2 {
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+
+.founder p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: var(--text-muted);
+  margin-bottom: 12px;
 }
 </style>
 </head>
