--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   --bg:#050810;
   --bg-soft:#0e1320;
   --accent:#3b82f6;
-  --accent-soft:rgba(59,130,246,.15);
   --text:#f9fafb;
   --muted:#9ca3af;
   --max:1100px;
 }
+
 *{box-sizing:border-box}
+
 body{
   margin:0;
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text",system-ui,sans-serif;
@@ -33,6 +34,7 @@ body{
   color:var(--text);
   -webkit-font-smoothing:antialiased;
 }
+
 a{text-decoration:none;color:inherit}
 
 .wrapper{
@@ -45,146 +47,132 @@ a{text-decoration:none;color:inherit}
 
 .hero{
   text-align:center;
-  padding:60px 0 40px;
+  padding:80px 0 60px;
 }
 
 .hero h1{
-  font-size:clamp(2.4rem,4vw,3.2rem);
+  font-size:clamp(2.6rem,4vw,3.2rem);
   letter-spacing:-.04em;
-  margin:0 0 16px;
+  margin:0 0 18px;
 }
 
 .hero p{
-  max-width:600px;
-  margin:0 auto 30px;
+  max-width:650px;
+  margin:0 auto 32px;
   color:var(--muted);
-  font-size:16px;
+  font-size:17px;
   line-height:1.6;
 }
 
 .cta{
   display:inline-block;
   background:linear-gradient(135deg,#3b82f6,#22c55e);
-  padding:14px 26px;
+  padding:15px 30px;
   border-radius:999px;
   font-weight:600;
   color:#0b1020;
-  box-shadow:0 15px 35px rgba(0,0,0,.6);
+  box-shadow:0 18px 40px rgba(0,0,0,.6);
 }
 
 /* SECTION */
 
 .section{
-  padding:70px 0;
+  padding:80px 0;
 }
 
 .section h2{
-  font-size:1.6rem;
-  margin-bottom:16px;
+  font-size:1.8rem;
+  margin-bottom:18px;
   text-align:center;
 }
 
 .section p{
-  max-width:650px;
-  margin:0 auto 30px;
+  max-width:700px;
+  margin:0 auto 40px;
   text-align:center;
   color:var(--muted);
+  font-size:16px;
+  line-height:1.6;
 }
 
 /* FEATURES */
 
 .features{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-  gap:24px;
-  margin-top:40px;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:28px;
 }
 
 .card{
   background:var(--bg-soft);
-  padding:26px;
-  border-radius:18px;
+  padding:28px;
+  border-radius:20px;
   border:1px solid rgba(255,255,255,.05);
 }
 
 .card h3{
   margin-top:0;
-  font-size:1rem;
-  margin-bottom:10px;
+  font-size:1.05rem;
+  margin-bottom:12px;
 }
 
 .card p{
   color:var(--muted);
-  font-size:14px;
-  line-height:1.5;
+  font-size:15px;
+  line-height:1.6;
 }
-<!-- Founder section -->
-<section class="founder">
-  <div class="founder-inner">
-    <h2>Built from real spine recovery.</h2>
-    <p>
-      Recoverly was created by a spine surgery patient who needed a clearer way to
-      track progress between follow-up appointments.
-    </p>
-    <p>
-      It’s grounded in lived experience — but built with structure and discipline
-      so anyone recovering from lumbar, cervical, or other spine procedures can use it confidently.
-    </p>
-  </div>
-</section>
+
 /* SCREENSHOTS */
 
 .screens{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-  margin-top:40px;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:30px;
+  justify-items:center;
 }
 
 .screens img{
   width:100%;
-  border-radius:20px;
-  box-shadow:0 20px 45px rgba(0,0,0,.8);
+  max-width:260px;
+  border-radius:24px;
+  box-shadow:0 30px 60px rgba(0,0,0,.85);
+}
+
+/* FOUNDER */
+
+.founder{
+  max-width:720px;
+  margin:0 auto;
+  text-align:center;
+}
+
+.founder h2{
+  font-size:1.8rem;
+  margin-bottom:20px;
+}
+
+.founder p{
+  font-size:16px;
+  line-height:1.7;
+  color:var(--muted);
+  margin-bottom:16px;
 }
 
 /* FOOTER */
 
 footer{
   text-align:center;
-  padding:60px 0 40px;
+  padding:80px 0 40px;
   color:var(--muted);
-  font-size:13px;
+  font-size:14px;
 }
+
 footer a{
-  color:var(--muted);
   text-decoration:underline dotted;
-}
-      /* Founder section */
-
-.founder {
-  margin: 80px 0;
-  display: flex;
-  justify-content: center;
-}
-
-.founder-inner {
-  max-width: 720px;
-  text-align: center;
-}
-
-.founder h2 {
-  font-size: 28px;
-  margin-bottom: 16px;
-}
-
-.founder p {
-  font-size: 16px;
-  line-height: 1.6;
-  color: var(--text-muted);
-  margin-bottom: 12px;
 }
 </style>
 </head>
+
 <body>
 
 <div class="wrapper">
@@ -237,6 +225,18 @@ footer a{
     <img src="screen-insights.png" alt="Insights view">
     <img src="screen-report.png" alt="PDF report preview">
   </div>
+</section>
+
+<section class="section founder">
+  <h2>Built from real spine recovery.</h2>
+  <p>
+    Recoverly was created by a spine surgery patient who needed a clearer way to
+    track progress between follow-up appointments.
+  </p>
+  <p>
+    It’s grounded in lived experience — but built with structure and discipline
+    so anyone recovering from lumbar, cervical, or other spine procedures can use it confidently.
+  </p>
 </section>
 
 <section class="section">
