--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@ a{text-decoration:none;color:inherit}
 /* SECTION */
 
 .section{
-  padding:80px 0;
+  padding:100px 0;
+}
+
+.section:nth-of-type(even){
+  background:rgba(255,255,255,.02);
 }
 
 .section h2{
@@ -99,15 +103,24 @@ a{text-decoration:none;color:inherit}
 
 .features{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:28px;
+  grid-template-columns:repeat(2, 1fr);
+  gap:32px;
+  max-width:900px;
+  margin:0 auto;
+}
+
+@media (max-width: 800px){
+  .features{
+    grid-template-columns:1fr;
+  }
 }
 
 .card{
-  background:var(--bg-soft);
-  padding:28px;
-  border-radius:20px;
-  border:1px solid rgba(255,255,255,.05);
+  background:linear-gradient(180deg, #0e1320, #0b1020);
+  padding:32px;
+  border-radius:22px;
+  border:1px solid rgba(255,255,255,.06);
+  box-shadow:0 25px 60px rgba(0,0,0,.65);
 }
 
 .card h3{
