--- a/index.html
+++ b/index.html
@@ -121,15 +121,17 @@ a{text-decoration:none;color:inherit}
   border-radius:22px;
   border:1px solid rgba(255,255,255,.06);
   box-shadow:0 25px 60px rgba(0,0,0,.65);
+      text-align: left;
 }
 
 .card h3{
-  margin-top:0;
+  margin:0 0 10px 0;
   font-size:1.05rem;
-  margin-bottom:12px;
+  line-height:1.25;
 }
 
 .card p{
+  margin:0;
   color:var(--muted);
   font-size:15px;
   line-height:1.6;
