--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ a{text-decoration:none;color:inherit}
   margin:0 0 10px 0;
   font-size:1.05rem;
   line-height:1.25;
+      text-align: left;
 }
 
 .card p{
@@ -135,6 +136,7 @@ a{text-decoration:none;color:inherit}
   color:var(--muted);
   font-size:15px;
   line-height:1.6;
+      text-align: left;
 }
 
 /* SCREENSHOTS */
