--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ a{text-decoration:none;color:inherit}
   grid-template-columns:repeat(2, 1fr);
   gap:32px;
   max-width:900px;
-  margin:0 auto;
+  margin:50px auto 0;   /* 👈 adds breathing room above */
 }
 
 @media (max-width: 800px){
@@ -237,10 +237,10 @@ footer a{
   <h2>Preview Recoverly</h2>
 
   <div class="screens">
-    <img src="screen-today.png" alt="Today view">
-    <img src="screen-history.png" alt="History view">
-    <img src="screen-insights.png" alt="Insights view">
-    <img src="screen-report.png" alt="PDF report preview">
+    <img src="01-Insights.jpg" alt="Insights">
+    <img src="02-Daily Logging.jpg" alt="Daily Logging">
+    <img src="03-History.jpg" alt="History">
+    <img src="04-PDF.jpg" alt="PDF report preview">   
   </div>
 </section>
 
