--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ footer a{
 
     <div class="card">
       <h3>Compare recent vs prior week</h3>
-      <p>Clear 7-day vs 7-day summaries show whether symptoms are improving, worsening, or holding steady.</p>
+      <p>Weekly comparisons show whether symptoms are improving, worsening, or holding steady.</p>
     </div>
 
     <div class="card">
