--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@ a{text-decoration:none;color:inherit}
   letter-spacing:-.04em;
   margin:0 0 18px;
 }
+      .hero-brand{
+  font-size:14px;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  color:var(--muted);
+  margin-bottom:14px;
+  font-weight:600;
+}
 
 .hero p{
   max-width:650px;
@@ -195,6 +203,7 @@ footer a{
 <div class="wrapper">
 
 <section class="hero">
+  <div class="hero-brand">Recoverly – Spine Recovery</div>
   <h1>Structured weekly trends for spine recovery.</h1>
   <p>
     Track symptoms, nerve activity, and movement — and see clear 7-day vs 7-day comparisons instead of guessing how your week has been.
