--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@ a{text-decoration:none;color:inherit}
 .section{
   padding:100px 0;
 }
-
+.section.screens-section{
+  background:linear-gradient(180deg, rgba(14,19,32,.6), rgba(5,8,16,.8));
+  border-radius:28px;
+  padding:80px 40px;
+}
 .section:nth-of-type(even){
   background:rgba(255,255,255,.02);
 }
@@ -262,7 +266,7 @@ footer a{
   </div>
 </section>
 
-<section class="section">
+<section class="section screens-section">
   <h2>Preview Recoverly</h2>
 
 <div class="screens">
