--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ footer a{
   <div class="hero-brand">Recoverly – Spine Recovery</div>
   <h1>Structured weekly trends for spine recovery.</h1>
   <p>
-    Track symptoms, nerve activity, and movement — and see clear week-over-week comparisons instead of guessing how your week has been
+    Track symptoms, nerve activity, and movement — and see clear week-over-week comparisons instead of guessing how your week has been.
   </p>
   <a class="cta" href="https://apps.apple.com/us/app/recoverly-recovery-tracker/id6756222251" target="_blank">
     Download on the App Store
